# hamilton

./: .asf.yaml  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-DOCS.md  README.md  SECURITY.md  SUMMARY.md  bad_functions.py  basics.md  build_conda.sh  config_modifier.py  contributing.md  data_quality.md  decorators.md  developer_setup.md  driver.py  dummy_functions.py  ellipsis.yaml  extensions.md  extract_column_nodes.py  function_modifiers.py  graph.py  hamilton-community.md  license.md  log_setup.py  models.py  node.py  parametrized_nodes.py  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  (+7 more)
.ci/: setup.sh  test.sh
.circleci/: config.yml
.github/: HAMILTON_CONTRIB_PR_TEMPLATE.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md 
15-minutes-to-mastery/: installing.md  integrating-decorators.md
best-practices/: README.md  code-organization.md  common-indices.md  function-modifiers.md  function-naming.md  loading-data.md  migrating-to-hamilton.md  output-immutability.md  using-within-your-etl-system.md  writing-drivers.md
config/: default_config.py
contrib/: MANIFEST.in  README.md  setup.cfg  setup.py
dev_tools/language_server/: README.md  pyproject.toml
dev_tools/language_server/hamilton_lsp/: __main__.py  server.py
dev_tools/language_server/tests/: conftest.py  ls_setup.py  test_commands.py
dev_tools/language_server/tests/resources/: dataflow.py
docs/: README.md  conf.py  contributing.rst  data_adapters_extension.py  extensions.rst  further-reading.rst  hamilton-community.rst  hamilton-v-x.md  index.md  index.rst  license.rst  main.md  make_testimonials.py  requirements.txt  robots.txt  talks-or-podcasts-or-blogs-or-papers.md  talks-or-podcasts-or-blogs-or-papers.rst  to_migrate.rst
examples/: Dockerfile  README.md  make_python_virtualenv.sh  validate_examples.py
examples/experiment_management/: README.md  analysis.py  experiment_hook.py  notebook.ipynb  pydantic_models.py  pyproject.toml  requirements.txt  run.py  runner.py  server.py
examples/experiment_management/demo/: analysis.py  run.py
examples/experiment_management/hamilton_experiments/: __init__.py  __main__.py  hook.py  server.py
hamilton/: __init__.py  ad_hoc_utils.py  admin.py  async_driver.py  base.py  dask_executor.py  driver.py  function_modifiers.py  function_modifiers_base.py  graph.py  graph_types.py  graph_utils.py  htypes.py  models.py  node.py  ray_executor.py  registry.py  server  settings.py  spark_executor.py  telemetry.py  tracking.py  type_utils.py  version.py
less-than-15-minutes-to-mastery/: README.md  digging-in-further.md  installing.md  running-your-dataflow.md
old-docs/: contributing.md  extensions.md  license.md  readme.md  talks-or-podcasts-or-blogs-or-papers.md
overview-of-concepts/: README.md  decorators.md  drivers.md  lexicon.md  parametrizing-the-dag.md  the-hamilton-driver.md  writing-transform-functions.md  writing-transforms.md
pandas table/: pandas_extensions.py  test_pandas_extensions.py
plugin_tests/: README.md
quick-start/: README.md  installing.md  (+5 more)
ui/sdk/: .pre-commit-config.yaml  README.md  developer_setup.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  ruff.toml
ui/sdk/.github/workflows/: unit-tests.yml
ui/sdk/src/hamilton_sdk/: __init__.py  ad_hoc_admin.py  adapters.py  driver.py
ui/sdk/src/hamilton_sdk/api/: clients.py  constants.py  projecttypes.py
ui/sdk/src/hamilton_sdk/cli/: cli.py  initialize.py
ui/sdk/src/hamilton_sdk/cli/templates/common/: .env.jinja2  README.md.jinja2  requirements.txt.jinja2  run.py.jinja2  run.sh.jinja2
ui/sdk/src/hamilton_sdk/cli/templates/data_processing/: template_data.json
ui/sdk/src/hamilton_sdk/cli/templates/data_processing/components/: _run.py  common.py  data_loader.py
ui/sdk/src/hamilton_sdk/cli/templates/data_processing/config/: config.json
ui/sdk/src/hamilton_sdk/cli/templates/data_processing/data/: order_details.csv  orders_new.csv  orders_old.csv
ui/sdk/src/hamilton_sdk/cli/templates/hello_world/: template_data.json
ui/sdk/src/hamilton_sdk/cli/templates/hello_world/components/: transforms.py
ui/sdk/src/hamilton_sdk/cli/templates/hello_world/data/: signups.csv  spend.csv
ui/sdk/src/hamilton_sdk/cli/templates/machine_learning/: template_data.json
ui/sdk/src/hamilton_sdk/cli/templates/machine_learning/components/: _run.py  feature_transforms.py  iris_loader.py  model_fitting.py  models.py
ui/sdk/src/hamilton_sdk/cli/templates/time_series_feature_engineering/: template_data.json
ui/sdk/src/hamilton_sdk/cli/templates/time_series_feature_engineering/components/: _run.py  data_loader.py  ftrs_autoregression.py  ftrs_calendar.py  ftrs_common_prep.py
ui/sdk/src/hamilton_sdk/cli/templates/time_series_feature_engineering/data/: train_sample.csv
ui/sdk/src/hamilton_sdk/tracking/: constants.py  data_observation.py  dataframe_stats.py  example_tracking.py  ibis_stats.py  langchain_stats.py  numpy_stats.py  pandas_col_stats.py  pandas_stats.py  polars_col_stats.py  polars_stats.py  pydantic_stats.py  pyspark_stats.py  runs.py  scikit_learn_stats.py  sql_utils.py  stats.py  trackingtypes.py  utils.py
ui/sdk/tests/: conftest.py  test_adapters.py  test_driver.py  test_tracking.py
ui/sdk/tests/resources/: basic_dag_with_config.py  parallel_dag.py  parallel_dag_error.py
ui/sdk/tests/resources/data/: barcelona_weekdays.csv  barcelona_weekends.csv  berlin_weekdays.csv  berlin_weekends.csv  budapest_weekdays.csv  budapest_weekends.csv
ui/sdk/tests/test_package_to_hash/: __init__.py  submodule1.py  submodule2.py
ui/sdk/tests/test_package_to_hash/subpackage/: __init__.py
ui/sdk/tests/tracking/: test_constants.py  test_dataframe_stats.py  test_ibis_stats.py  test_langchain_stats.py  test_pandas_col_stats.py  test_pandas_stats.py  test_polars_col_stats.py  test_polars_stats.py  test_pydantic_stats.py  test_pyspark_stats.py  test_runs.py  test_stats.py  test_utils.py
(+1991 files in other folders)
